--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
+*{
+    background-color: aquamarine;
+}
 h1{
     color: white;
     text-align: center;
+}
+.page-error{
+    align-items: center;
 }
