modifing the js file

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 *{
-    background-color: aquamarine;
+    background-color: whitesmoke;
 }
 h1{
-    color: white;
+    color: black;
     text-align: center;
 }
 .page-error{
